--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,28 @@ code {
 .header {
   width: 100vw;
   height: 64px;
-  background-color: rgb(238, 197, 243);
+  background-color: rgb(236, 226, 236);
   display: flex;
   justify-content: center;
+  align-items: center;
+  border-bottom: 3px solid rgb(211, 188, 224);
+}
+
+.button {
+  text-decoration: none;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: white;
+  padding: 15px 15px;
+  margin: 10px 20px;
+  border-radius: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-image: linear-gradient(to right, #9EEFE1 0%, #4830F0 51%, #9EEFE1 100%);
+  background-size: 200% auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+  transition: .5s;
+  outline: none;
 }
